# halo2-exactness-tooling

./: .gitignore  Cargo.toml  README.md
docs/: halo2_integration_example.md  halo2wrong_adapter_example.md
examples/: halo2_integration_demo.rs  halo2wrong_adapter_demo.rs
src/: halo2wrong_adapter.rs  integration.rs  lib.rs
tests/: halo2wrong_adapter.rs
